# notesflash

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: macos-dmg.yml
cloud/: wrangler.jsonc
cloud/public/: index.html  sw.js
cloud/public/assets/: event-CLgtw3pk.js  index-0P63BTnC.css  index-GtRzaEzO.js
cloud/test/: search.test.ts
deploy/: README.md  nginx-pwa.conf  notesflash-pwa.service  notesflash-tunnel.service
docs/: DEPLOYMENT.md
scripts/: sync-cloud-assets.mjs
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  network_diagnostics.rs
src/components/: ConnectPanel.svelte  DeleteNoteDialog.svelte  HighlightedText.svelte  ImageGallery.svelte  NoteCard.svelte  NoteEditor.svelte  ProxySettings.svelte  QuickCreateRow.svelte  SearchBar.svelte  SettingsDialog.svelte  SwipeableNote.svelte
src/lib/: api.test.ts  api.ts  clipboard.test.ts  clipboard.ts  local-search.test.ts  local-search.ts  network-settings.test.ts  network-settings.ts  note-content.test.ts  note-content.ts  pwa.test.ts  pwa.ts  runtime-fetch.test.ts  runtime-fetch.ts  search-lines.test.ts  search-lines.ts  search-state.test.ts  search-state.ts  selection.test.ts  selection.ts  text.test.ts  text.ts  types.ts
