[package]
name = "notesflash"
version = "0.1.1"
description = "A compact, search-first notes client"
authors = ["NotesFlash contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "notesflash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
