[package]
name = "notesflash"
version = "0.1.3"
description = "A compact, search-first notes client"
authors = ["NotesFlash contributors"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "notesflash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-http = { version = "=2.5.9", default-features = false, features = ["native-tls", "http2", "charset", "macos-system-configuration"] }
tauri-plugin-single-instance = "2"
